--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,21 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RIFA_EXPIRE_AT_MINUTES=60
+# Configurações de Pedidos
+ORDER_EXPIRATION_MINUTES=60
+ORDER_MAX_ATTEMPTS=3
+ORDER_RETRY_AFTER_MINUTES=10
+
+# Configurações do Mercado Pago
+MERCADOPAGO_PUBLIC_KEY=
+MERCADOPAGO_ACCESS_TOKEN=
+MERCADOPAGO_WEBHOOK_SECRET=
+MERCADOPAGO_SANDBOX=true
+
+# Configurações de Notificação
+NOTIFY_EMAIL=true
+NOTIFY_SMS=false
+ADMIN_EMAIL=admin@example.com
 MERCADOPAGO_ACCESS_TOKEN=
 FILAMENT_FILESYSTEM_DISK=public
 
