--- a/.env.example
+++ b/.env.example
@@ -64,16 +64,19 @@ ORDER_MAX_ATTEMPTS=3
 ORDER_RETRY_AFTER_MINUTES=10
 
 # Configurações do Mercado Pago
+# Chave pública para integração com o frontend
 MERCADOPAGO_PUBLIC_KEY=
+# Token de acesso para a API do Mercado Pago
 MERCADOPAGO_ACCESS_TOKEN=
+# Segredo para validação de webhooks (definir no painel do Mercado Pago)
 MERCADOPAGO_WEBHOOK_SECRET=
+# Modo sandbox (true para testes, false para produção)
 MERCADOPAGO_SANDBOX=true
 
 # Configurações de Notificação
 NOTIFY_EMAIL=true
 NOTIFY_SMS=false
 ADMIN_EMAIL=admin@example.com
-MERCADOPAGO_ACCESS_TOKEN=
 FILAMENT_FILESYSTEM_DISK=public
 
 VITE_FACEBOOK="https://valdeir.dev"
